# pico-cam

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: core1.rs  draw_debug_output.rs  dynamic.pio  instant.pio  lepton.rs  main.rs  old.rs  sdcard.rs  soft_spi_slave.pio  static_string.rs  utils.rs
