[package]
edition = "2021"
name = "pico-cam"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-sdmmc = "0.3.0"


defmt = { version = "0.3.2", features = [] }
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#byteorder_slice = "3.0.0"
byteorder = { version = "^1.3", default-features = false }
byte-slice-cast = { version = "1.2.1", default-features = false }

ili9341 = "0.5.0"
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
numtoa = "0.2.4"
critical-section = "1.1.0"
fugit = "0.3.6"

rp2040-hal = { path = "../rp-hal/rp2040-hal" }
# We're using a Pico by default on this template
rp-pico = { path = "../rp-hal/boards/rp-pico" }

miniz_oxide = { path = "../miniz_oxide/miniz_oxide", default-features = false }

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.5", features=["rt"] }
# rp2040-boot2 = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
